--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,11 @@ html {
 
 i {
     margin: 0 2rem;
+    padding: 0.3rem;
     font-size: 1.8rem;
     color: #258af0;
+
+    transition: all 0.3s;
 }
 
 .container {
@@ -28,6 +31,7 @@ i {
 }
 
 .main-title {
+    height: 120px;
     padding: 2rem 0;
     font-size: 4rem;
     font-weight: 900;
@@ -48,8 +52,11 @@ i {
     background-color: white;
     border-radius: 3px;
 }
+.my-task {
+    width: calc(100% - 12rem);
+}
 
-.input-container > input {
+.input-container .my-task > input {
     width: calc(100% - 12rem);
     height: 80%;
     border: none;
@@ -68,6 +75,7 @@ i {
     width: 100%;
     height: 70px;
     background-color: white;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.397);
 }
 
 .opacity {
@@ -94,7 +102,16 @@ i {
 
 .todo-list__list {
     width: 100%;
+    height: calc(100vh - 190px - 10rem);
     list-style-type: none;
+    overflow: auto;
+}
+.todo-list__list::-webkit-scrollbar {
+    display: none;
+}
+.todo-list__list {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .todo-list__item {
@@ -104,7 +121,7 @@ i {
     width: 100%;
     height: 70px;
     background-color: white;
-    border-top: 1px solid rgba(128, 128, 128, 0.397);
+    border-bottom: 1px solid rgba(128, 128, 128, 0.397);
 }
 
 .todo-list__item > .task > span {
@@ -117,9 +134,15 @@ i {
     color: red;
 }
 
+.todo-list__item > i.red:hover {
+    transform: scale(1.2);
+}
+
 .task > i:hover {
     opacity: 1;
     cursor: pointer;
+    background-color: #cad9e9a9;
+    border-radius: 50%;
 }
 
 .done {
